# full_stack_agronomy_yield_prediction

./: README.md  docker-compose.yml  nginx.conf
backend/: Cargo.toml
backend/src/: Dockerfile  errors.rs  handlers.rs  main.rs  ml_service.rs  models.rs
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/yield/: Dockerfile  package.json
frontend/yield/src/: App.tsx  types.ts
