[package]
name = "agri_ai_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
# Linfa and its components would be added here for a real model
# For this example, we'll use placeholders, so specific linfa crates are omitted
# linfa = "0.6" 
# linfa-linear = "0.6" # Example for linear regression
# ndarray = "0.15" # Required by linfa
# polars = { version = "0.37", features = ["lazy", "ndjson"] } # If used for data processing

# For custom error handling convenience
thiserror = "1.0"

# For logging
log = "0.4"
env_logger = "0.10"

# For random number generation in dummy model
rand = "0.8"
